--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
-language: ruby
+language:
+  - objective-c
+  - ruby
 rvm:
   - 1.8.7
   - 1.9.2
@@ -10,3 +12,9 @@ rvm:
   - rbx-19mode
   - ree
 script: bundle exec rspec
+before_install:
+  - wget -U curl http://imageoptim.com/ImageOptim.tbz2
+  - tar -xjf ImageOptim.tbz2
+  - brew install jhead
+env:
+  - PATH=ImageOptim.app/Contents/MacOS:$PATH
