--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,9 @@ before_install:
   - mv pngout-*-linux pngout-linux
 env:
   - PATH=pngout-linux/x86_64:$PATH
+matrix:
+  allow_failures:
+    - rvm: jruby-18mode
+    - rvm: jruby-19mode
+    - rvm: rbx-18mode
+    - rvm: rbx-19mode
