travis: npm install -g svgo

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,6 @@ before_install:
   - wget http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz
   - tar -xzf pngout-*-linux.tar.gz
   - mv pngout-*-linux pngout-linux
+  - npm install -g svgo
 env:
   - PATH=pngout-linux/x86_64:$PATH
