--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
   - mv advancecomp-$ADVANCECOMP_VERSION/advpng ~/bin
   # pngquant:
   - git clone git://github.com/pornel/pngquant.git
-  - pushd pngquant && git checkout $(git describe --tags --abbrev=0) && make && popd
+  - (cd pngquant && git checkout $(git describe --tags --abbrev=0) && make)
   - mv pngquant/pngquant ~/bin
   # pngout:
   - wget http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz
