--- a/.travis.yml
+++ b/.travis.yml
@@ -19,17 +19,20 @@ before_install:
   - sudo apt-get install -qq gifsicle jhead jpegoptim libjpeg-progs optipng pngcrush
   - npm install -g svgo
   - mkdir ~/bin
-  # advancecomp(advpng):
+
+  - echo 'Installing advancecomp(advpng):'
   - ADVANCECOMP_VERSION=1.19
   - wget http://downloads.sourceforge.net/project/advancemame/advancecomp/$ADVANCECOMP_VERSION/advancecomp-$ADVANCECOMP_VERSION.tar.gz
   - tar -xzf advancecomp-$ADVANCECOMP_VERSION.tar.gz
   - (cd advancecomp-$ADVANCECOMP_VERSION && ./configure && make)
   - mv advancecomp-$ADVANCECOMP_VERSION/advpng ~/bin
-  # pngquant:
+
+  - echo 'Installing pngquant:'
   - git clone git://github.com/pornel/pngquant.git
   - (cd pngquant && git checkout $(git describe --tags --abbrev=0) && make)
   - mv pngquant/pngquant ~/bin
-  # pngout:
+
+  - echo 'Installing pngout:'
   - PNGOUT_VERSION=20130221
   - wget http://static.jonof.id.au/dl/kenutils/pngout-$PNGOUT_VERSION-linux.tar.gz
   - tar -xzf pngout-$PNGOUT_VERSION-linux.tar.gz
