allow Metrics/PerceivedComplexity of 8

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,9 @@ Metrics/CyclomaticComplexity:
 Metrics/MethodLength:
   Max: 20
 
+Metrics/PerceivedComplexity:
+  Max: 8
+
 Style/AccessModifierIndentation:
   EnforcedStyle: outdent
 
