run image_optim --info in travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ rvm:
   - jruby-head
   - ree
 script:
+  - bundle exec image_optim --info
   - bundle exec rspec
   - '! bundle show rubocop || bundle exec rubocop' # run rubocop only if it is bundled
 before_install:
