--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ env:
   - PATH=~/bin:$PATH
 matrix:
   fast_finish: true
+  allow_failures:
+    - rvm: '2.2'
   include:
     - env: RUBOCOP=true
       rvm: default
