I like parallel assignments — disable rubocop rule

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,9 @@ Metrics/MethodLength:
 Metrics/PerceivedComplexity:
   Max: 8
 
+Performance/ParallelAssignment:
+  Enabled: false
+
 Style/AccessModifierIndentation:
   EnforcedStyle: outdent
 
