--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 sudo: false
 language: ruby
+cache:
+  bundler: true
+  directories:
+  - $(npm root)
+  - ~/bin
 rvm:
   - 1.8.7
   - 1.9.2
@@ -21,12 +26,13 @@ script:
   ; fi
 before_install:
   if [ -z "$RUBOCOP" ]; then
-    mkdir ~/bin
-    && npm install -g svgo
-    && curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
+    command -v svgo || npm install svgo
+    ;
+    command -v pngout || (
+      mkdir -p ~/bin
+      && curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
+    )
   ; fi
-env:
-  - PATH=~/bin:$PATH
 matrix:
   fast_finish: true
   include:
