--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,9 @@ AllCops:
 Lint/EndAlignment:
   AlignWith: variable
 
+Lint/UnneededSplatExpansion:
+  Enabled: false
+
 Metrics/AbcSize:
   Max: 30
 
