--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,12 @@ Lint/UnneededSplatExpansion:
 Metrics/AbcSize:
   Max: 30
 
+Metrics/BlockLength:
+  Exclude:
+    - 'lib/image_optim/runner/option_parser.rb'
+    - 'script/worker_analysis'
+    - 'spec/**/*.rb'
+
 Metrics/ClassLength:
   Max: 150
 
