--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ language: ruby
 cache:
   bundler: true
   directories:
-  - $(npm root)
-  - ~/bin
+    - $(npm root)
+    - ~/bin
 rvm:
   - '1.8'
   - '1.9'
@@ -13,35 +13,22 @@ rvm:
   - '2.2'
   - jruby-19mode
   - ree
-script: |
-  (
-    set -ex
-    if [ -n "$RUBOCOP" ]; then
-      bundle exec rubocop
-    else
-      bundle exec image_optim --info
-      bundle exec rspec
-    fi
-  )
-before_install: |
-  (
-    set -ex
-    if [ -z "$RUBOCOP" ]; then
-      command -v svgo || npm install svgo
-      command -v pngout || {
-        mkdir -p ~/bin
-        curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
-      }
-    fi
-  )
-after_success:
-  - if [ -n "$CODECLIMATE" ]; then bundle exec codeclimate-test-reporter; fi
+script:
+  - bundle exec image_optim --info
+  - bundle exec rspec
+before_install:
+  - mkdir -p ~/bin
+  - command -v svgo || npm install svgo
+  - command -v pngout || curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
 matrix:
   include:
-    - env: CODECLIMATE=true
+    - env: CODECLIMATE=✓
       rvm: '2'
-    - env: RUBOCOP=true
+      after_success: bundle exec codeclimate-test-reporter
+    - env: RUBOCOP=✓
       rvm: '2'
+      script: bundle exec rubocop
+      before_install:
   allow_failures:
     - rvm: jruby-19mode
 addons:
