--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,16 @@ cache:
     - $(npm root)
     - ~/bin
 rvm:
-  - '1.8'
-  - '1.9'
-  - '2.0'
-  - '2.1'
-  - '2.2'
-  - jruby-19mode
-  - ree
+  - '1.8.7-p371'
+  - '1.9.3-p551'
+  - '2.0.0-p648'
+  - '2.1.10'
+  - '2.2.6'
+  - '2.3.3'
+  - '2.4.0'
+  - 'jruby-1.7.26'
+  - 'jruby-9.0.5.0'
+  - 'jruby-9.1.5.0'
 script:
   - bundle exec image_optim --info
   - bundle exec rspec
@@ -23,14 +26,16 @@ before_install:
 matrix:
   include:
     - env: CODECLIMATE=✓
-      rvm: '2'
+      rvm: '2.4.0'
       after_success: bundle exec codeclimate-test-reporter
     - env: RUBOCOP=✓
-      rvm: '2'
+      rvm: '2.4.0'
       script: bundle exec rubocop
       before_install:
-  allow_failures:
-    - rvm: jruby-19mode
+    - env: CHECK_RUBIES=✓
+      rvm: '2.4.0'
+      script: bundle exec travis_check_rubies
+      before_install:
 addons:
   code_climate:
     repo_token:
