travis: forbid rainbow 2.2.1 as it has an installation bug (sickill/rainbow#44)

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,9 @@ AllCops:
     - '*.gemspec'
     - 'vendor/**/*'
 
+Bundler/OrderedGems:
+  Enabled: false
+
 Lint/EndAlignment:
   EnforcedStyleAlignWith: variable
 
