--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ script:
   - bundle exec image_optim --info
   - bundle exec rspec
 before_install:
+  - gem update --system
+  - gem update bundler
   - mkdir -p ~/bin
   - command -v svgo || npm install svgo
   - command -v pngout || curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
