--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
 before_install:
   - gem update --system
   - gem update bundler
+  - nvm install stable
   - mkdir -p ~/bin
   - command -v svgo || npm install svgo
   - command -v pngout || curl -L "http://static.jonof.id.au/dl/kenutils/pngout-20130221-linux.tar.gz" | tar -xz -C ~/bin --strip-components 2 --wildcards '*/x86_64/pngout'
