--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,6 +29,7 @@ Layout/IndentHeredoc:
 
 Layout/SpaceBeforeBlockBraces:
   EnforcedStyle: no_space
+  EnforcedStyleForEmptyBraces: no_space
 
 Layout/SpaceInsideHashLiteralBraces:
   EnforcedStyle: no_space
