--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,9 @@ Layout/CaseIndentation:
 Layout/DotPosition:
   EnforcedStyle: trailing
 
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: variable
+
 Layout/IndentArray:
   EnforcedStyle: consistent
 
@@ -37,9 +40,6 @@ Layout/SpaceInsideHashLiteralBraces:
 Lint/AmbiguousBlockAssociation:
   Exclude:
     - spec/**/*_spec.rb
-
-Lint/EndAlignment:
-  EnforcedStyleAlignWith: variable
 
 Lint/NestedPercentLiteral:
   Enabled: false
@@ -84,6 +84,9 @@ Style/EmptyCaseCondition:
 Style/Encoding:
   Enabled: false
 
+Style/ExpandPathArguments:
+  Enabled: false
+
 Style/FormatStringToken:
   Enabled: false
 
@@ -111,5 +114,8 @@ Style/SymbolArray:
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: no_comma
 
-Style/TrailingCommaInLiteral:
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
