--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,9 @@ script:
   - bundle exec image_optim --info
   - bundle exec rspec
 before_install:
-  - gem update --system
   - gem install bundler
+  - ruby -e 'require "rubygems"; require "bundler/inline"; gemfile{ source "https://rubygems.org"; gem "rubygems-update" }' # get compatible version of rubygems-update
+  - gem update --system
   - nvm install stable
   - mkdir -p ~/bin
   - command -v svgo || npm install -g svgo
