--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 before_install:
   - 'echo "gem: --no-ri --no-rdoc --no-document" > ~/.gemrc'
   - gem install rubygems-update || gem install rubygems-update --version '< 3'
-  - gem update --system
+  - update_rubygems
   - gem install bundler || gem install bundler --version '< 2'
   - nvm install stable
   - mkdir -p ~/bin
