--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -130,6 +130,9 @@ Style/OptionalBooleanParameter:
 Style/ParallelAssignment:
   Enabled: false
 
+Style/RedundantBegin:
+  Enabled: false
+
 Style/RescueStandardError:
   EnforcedStyle: implicit
 
