--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,6 +21,7 @@ jobs:
         - '3.0'
         - '3.1'
         - jruby-9.2
+        - jruby-9.3
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
