--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,6 +22,7 @@ jobs:
         - '3.1'
         - jruby-9.2
         - jruby-9.3
+        - jruby-9.4
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
