--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -45,6 +45,7 @@ jobs:
         - '3.1'
         - '3.2'
       fail-fast: false
+    continue-on-error: ${{ matrix.ruby == '3.2' }}
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
